# fastapi-starter

./: .env  .env.example  .gitignore  alembic.ini  command.md  docker-compose.yaml  main.py  pyproject.toml  run.sh
alembic/: env.py
alembic/versions/: 0b0dab77fa5e_create_users_table.py  9482cca39599_change_users_model.py  e33463397233_change_users_model.py
app/: main.py
app/config/: __init__.py  config.py
app/errors/: __init__.py  exception_handler.py  exceptions.py
app/logging/: logging.py
app/models/: __init__.py  base.py  user.py
app/routers/: __init__.py  router.py  session.py  status_router.py  user_router.py
app/schemas/: __init__.py  user_schema.py
app/services/: __init__.py  user_service.py
app/storages/: __init__.py  cos.py  postgres.py  redis.py
app/utils/: __init__.py  auth.py  jwt.py  security.py
app/utils/response/: __init__.py  response.py
